--- a/Week 2/notes-keeping-website/public/index.html
+++ b/Week 2/notes-keeping-website/public/index.html
@@ -30,7 +30,7 @@
             integrity="sha384-jcQpNzrXAmzQF0HfZJ5p7F6iQF6p3SnLhSjf0eHT9iGka33DQ6uR1m4ibCBrbQPE"
             crossorigin="anonymous"
         />
-        <title>React App</title>
+        <title>Notes</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
